# ethereum-kit-android

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
ethereumkit/: .gitignore  CMakeLists.txt  build.gradle  copy_in3_java_bindings.sh
ethereumkit/c/: compiler.cmake
ethereumkit/schemas/io.horizontalsystems.ethereumkit.core.storage.KitDatabase/: 1.json  2.json  3.json
ethereumkit/schemas/io.horizontalsystems.ethereumkit.spv.core.storage.SpvDatabase/: 1.json
ethereumkit/src/main/: AndroidManifest.xml
ethereumkit/src/main/java/in3/: BlockID.java  Chain.java  IN3.java  IN3DefaultTransport.java  IN3Node.java  IN3Transport.java  JSON.java  Loader.java  NodeList.java  NodeProps.java  Proof.java  SignedBlockHash.java  Signer.java  StorageProvider.java  TempStorageProvider.java
ethereumkit/src/main/java/in3/config/: ChainConfiguration.java  ClientConfiguration.java  Configuration.java  NodeConfiguration.java
ethereumkit/src/main/java/in3/eth1/: API.java  Block.java  ENSMethod.java  Log.java  LogFilter.java  SimpleWallet.java  Transaction.java  TransactionReceipt.java  TransactionRequest.java
ethereumkit/src/main/java/in3/utils/: Account.java  Crypto.java  JSON.java  Signature.java  SignatureType.java  Signer.java  StorageProvider.java  TempStorageProvider.java
ethereumkit/src/main/java/io/horizontalsystems/ethereumkit/: EthereumKit.kt  Timer.kt
ethereumkit/src/main/java/io/horizontalsystems/ethereumkit/core/: ERC20.kt  (+26 more)
ethereumkit/src/test/java/io/horizontalsystems/ethereumkit/: EthereumKitTest.kt  RxBaseTest.kt
(+726 files in other folders)
